2001-12-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00656]
	* helpdir default is PREFIX/share/w3m

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.2.3.1-cvs

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.3.1
	* version.c.in: update
	* w3mhelp-*.html: version 0.2.3.1
	* doc/README: version 0.2.3.1, release date
	* doc-jp/README: ditto

2001-12-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02683]
	* configure (def_param): fix wrong behavior unless variable initialized
	* configure (def_param): fix unnecessary eval
	* configure (ask_choice): ditto

2001-12-20  Dai Sato  <satodai@dog.intcul.tohoku.ac.jp>

	* w3mhelp-*.html, doc/README, doc-jp/README: 
	* fix version number to 0.2.3.

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.2.3-cvs

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.3 release
	* version.c.in: update

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.3 release condidate 3
	* configure (use_bundled_gclib): added

2001-12-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* w3m 0.2.3 release candidate 2
	* [w3m-dev 02678]
	* configure: get mygcversion from gc/version.h
	* Makefile: update GCLIBTGZ

2001-12-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.3 release candidate 1
	* gc/: sync with w3m-0.2.2-inu-1.1/gc
	* Patches/ews4800: deleted
	* configure: comment out Patches/ews4800

2001-12-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02655] print version and compile options
	* configure: change order of questions
	* main.c (fversion): added
	* main.c (fusage): use fversion()
	* main.c (fusage): add -help, -version
	* main.c (MAIN): add -help, -version

2001-12-20  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02672]
	* main.c (wrap_GC_warn_proc): msg_ring initial value
	* main.c (SigAlarm): not need #ifdef USE_ALARM, already guarded

2001-12-18  Fumitoshi UKAI  <ukai@debian.or.jp>
